# sudoku_solver

./: CMakeLists.txt  ClusterWidget.cpp  MainWindow.cpp  README.md  SudokuWidget.cpp  board.cpp  main.cpp
include/: ClusterWidget.hpp  MainWindow.hpp  SudokuWidget.hpp  board.hpp
